Support dynamic pin